--- a/index.html
+++ b/index.html
@@ -10,165 +10,197 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="link logo"
-          >Web<span class="logo-blue">Studio</span></a
-        >
-        <ul class="list">
-          <li class="nav-bar-item">
-            <a href="./index.html" class="link nav-bar-link">Studio</a>
-          </li>
-          <li class="nav-bar-item">
-            <a href="./portfolio.html" class="link nav-bar-link">Portfolio</a>
-          </li>
-          <li class="nav-bar-item">
-            <a href="" class="link nav-bar-link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link address-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link address-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container flex-header">
+        <nav class="nav-menu">
+          <a href="./index.html" class="link logo"
+            >Web<span class="logo-blue">Studio</span></a
+          >
+          <ul class="list nav-list">
+            <li class="nav-bar-item">
+              <a href="./index.html" class="link nav-bar-link">Studio</a>
+            </li>
+            <li class="nav-bar-item">
+              <a href="./portfolio.html" class="link nav-bar-link">Portfolio</a>
+            </li>
+            <li class="nav-bar-item">
+              <a href="" class="link nav-bar-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="list address-list">
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="link address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="tel:+110001111111" class="link address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- Hero section -->
-      <section class="hero">
+      <section class="section hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-button">Order Service</button>
       </section>
-      <section>
-        <!-- Hidden title H2 -->
-        <h2 hidden class="features-section">Features</h2>
-        <ul class="list">
-          <li>
-            <h3 class="features-title">Strategy</h3>
-            <p class="features-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Punctuality</h3>
-            <p class="features-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Diligence</h3>
-            <p class="features-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Technologies</h3>
-            <p class="features-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+
+      <!-- Features section -->
+      <section class="section features">
+        <div class="class container">
+          <h2 hidden class="features-section">Features</h2>
+
+          <ul class="list features-list">
+            <li class="features-item">
+              <h3 class="features-title">Strategy</h3>
+              <p class="features-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Punctuality</h3>
+              <p class="features-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Diligence</h3>
+              <p class="features-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Technologies</h3>
+              <p class="features-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="work-title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/work/img-1.jpg"
-              alt="Website"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/work/img-2.jpg"
-              alt="Chat bot"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/work/img-3.jpg"
-              alt="Mobile app"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+
+      <!-- Works section -->
+      <section class="section">
+        <div class="container">
+          <h2 class="work-title">What are we doing</h2>
+          <ul class="list works-list">
+            <li class="works-item">
+              <img
+                src="./images/work/img-1.jpg"
+                alt="Website"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="works-item">
+              <img
+                src="./images/work/img-2.jpg"
+                alt="Chat bot"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="works-item">
+              <img
+                src="./images/work/img-3.jpg"
+                alt="Mobile app"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Our team section -->
-      <section class="team-section">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="list">
-          <li class="team-list">
-            <img
-              src="./images/team/mark-guerro.jpg"
-              alt="Employee smiles"
-              width="264"
-              height="260"
-            />
-            <h3 class="member-name">Mark Guerrero</h3>
-            <p class="member-position">Product Designer</p>
-          </li>
-          <li class="team-list">
-            <img
-              src="./images/team/tom-ford.jpg"
-              alt="Employee smiles"
-              width="264"
-              height="260"
-            />
-            <h3 class="member-name">Tom Ford</h3>
-            <p class="member-position">Frontend Developer</p>
-          </li>
-          <li class="team-list">
-            <img
-              src="./images/team/camilla-garcia.jpg"
-              alt="Employee smiles"
-              width="264"
-              height="260"
-            />
-            <h3 class="member-name">Camila Garcia</h3>
-            <p class="member-position">Marketing</p>
-          </li>
-          <li class="team-list">
-            <img
-              src="./images/team/daniel-wilson.jpg"
-              alt="Employee smiles"
-              width="264"
-              height="260"
-            />
-            <h3 class="member-name">Daniel Wilson</h3>
-            <p class="member-position">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section team-section">
+        <div class="container team-container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="list team-list">
+            <li class="team-item">
+              <img
+                src="./images/team/mark-guerro.jpg"
+                alt="Employee smiles"
+                width="264"
+                height="260"
+                class="team-img"
+              />
+              <div class="team-content">
+                <h3 class="member-name">Mark Guerrero</h3>
+                <p class="member-position">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/tom-ford.jpg"
+                alt="Employee smiles"
+                width="264"
+                height="260"
+                class="team-img"
+              />
+              <div class="team-content">
+                <h3 class="member-name">Tom Ford</h3>
+                <p class="member-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/camilla-garcia.jpg"
+                alt="Employee smiles"
+                width="264"
+                height="260"
+                class="team-img"
+              />
+              <div class="team-content">
+                <h3 class="member-name">Camila Garcia</h3>
+                <p class="member-position">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/daniel-wilson.jpg"
+                alt="Employee smiles"
+                width="264"
+                height="260"
+                class="team-img"
+              />
+              <div class="team-content">
+                <h3 class="member-name">Daniel Wilson</h3>
+                <p class="member-position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="link logo"
-        >Web<span class="logo-white">Studio</span></a
-      >
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="footer-content">
+          <a href="./index.html" class="link logo"
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
