--- a/portfolio.html
+++ b/portfolio.html
@@ -18,167 +18,202 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="link logo"
-          >Web<span class="logo-blue">Studio</span></a
-        >
-        <ul class="list">
-          <li class="nav-bar-item">
-            <a href="./index.html" class="link nav-bar-link">Studio</a>
-          </li>
-          <li class="nav-bar-item">
-            <a href="./portfolio.html" class="link nav-bar-link">Portfolio</a>
-          </li>
-          <li class="nav-bar-item">
-            <a href="" class="link nav-bar-link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link address-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link address-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container flex-header">
+        <nav class="nav-menu">
+          <a href="./index.html" class="link logo"
+            >Web<span class="logo-blue">Studio</span></a
+          >
+          <ul class="list nav-list">
+            <li class="nav-bar-item">
+              <a href="./index.html" class="link nav-bar-link">Studio</a>
+            </li>
+            <li class="nav-bar-item">
+              <a href="./portfolio.html" class="link nav-bar-link">Portfolio</a>
+            </li>
+            <li class="nav-bar-item">
+              <a href="" class="link nav-bar-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="list address-list">
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="link address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="tel:+110001111111" class="link address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section>
+      <section class="section portfolio-section">
+        <div class="container">
         <h1 hidden>Portfolio</h1>
-        <ul class="list">
-          <li><button type="button" class="btn-filter">All</button></li>
-          <li><button type="button" class="btn-filter">Web Site</button></li>
-          <li><button type="button" class="btn-filter">App</button></li>
-          <li><button type="button" class="btn-filter">Design</button></li>
-          <li><button type="button" class="btn-filter">Marketing</button></li>
+        <ul class="list btn-list">
+          <li class="btn-item"><button type="button" class="btn-filter">All</button></li>
+          <li class="btn-item"><button type="button" class="btn-filter">Web Site</button></li>
+          <li class="btn-item"><button type="button" class="btn-filter">App</button></li>
+          <li class="btn-item"><button type="button" class="btn-filter">Design</button></li>
+          <li class="btn-item"><button type="button" class="btn-filter">Marketing</button></li>
         </ul>
-        <ul class="list">
-          <li>
+        <ul class="list portfolio-list">
+          <li class="portfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/banking-app.jpg"
                 alt="Screens of Banking App"
                 width="360"
                 height="300"
+                class="portgolio-img"
               />
+              <div class="portgolio-content">
               <h2 class="portfolio-title">Banking App Interface Concept</h2>
               <p class="portfolio-text">App</p>
+              </div>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/cashless.jpg"
                 alt="Payment by card"
                 width="360"
                 height="300"
+                class="portgolio-img"
               />
+              <div class="portgolio-content">
               <h2 class="portfolio-title">Cashless Payment</h2>
               <p class="portfolio-text">Marketing</p>
+              </div>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/meditation.jpg"
                 alt="App on laptop and on phone"
                 width="360"
                 height="300"
+                class="portgolio-img"
               />
+              <div class="portgolio-content">
               <h2 class="portfolio-title">Meditation App</h2>
-              <p class="portfolio-text">App</p></a
-            >
+              <p class="portfolio-text">App</p>
+              </div>
+              </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/taxi.jpg"
                 alt="driver taxi"
                 width="360"
                 height="300"
+                class="portgolio-img"
               />
+              <div class="portgolio-content">
               <h2 class="portfolio-title">Taxi Service</h2>
-              <p class="portfolio-text">Marketing</p></a
-            >
+              <p class="portfolio-text">Marketing</p>
+            </div>
+            </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/screen.jpg"
                 alt="diffrent images on screens"
                 width="360"
                 height="300"
+                class="portgolio-img"
               />
+              <div class="portgolio-content">
               <h2 class="portfolio-title">Screen Illustrations</h2>
-              <p class="portfolio-text">Design</p></a
-            >
+              <p class="portfolio-text">Design</p>
+              </div>
+              </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/online.jpg"
                 alt="Girl smiles"
                 width="360"
                 height="300"
+                class="portgolio-img"
               />
+              <div class="portgolio-content">
               <h2 class="portfolio-title">Online Courses</h2>
-              <p class="portfolio-text">Marketing</p></a
-            >
+              <p class="portfolio-text">Marketing</p>
+              </div>
+              </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/insta.jpg"
                 alt="Diffrent images for Instagram"
                 width="360"
                 height="300"
+                class="portgolio-img"
               />
+              <div class="portgolio-content">
               <h2 class="portfolio-title">Instagram Stories Concept</h2>
-              <p class="portfolio-text">Design</p></a
-            >
+              <p class="portfolio-text">Design</p>
+              </div>
+              </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/org-food.jpg"
                 alt="bag with grocery"
                 width="360"
                 height="300"
+                class="portgolio-img"
               />
+              <div class="portgolio-content">
               <h2 class="portfolio-title">Organic Food</h2>
-              <p class="portfolio-text">Web Site</p></a
-            >
+              <p class="portfolio-text">Web Site</p>
+              </div>
+            </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/coffee.jpg"
                 alt="barista poors milk to coffee"
                 width="360"
                 height="300"
+                class="portgolio-img"
               />
+              <div class="portgolio-content">
               <h2 class="portfolio-title">Fresh Coffee</h2>
-              <p class="portfolio-text">Web Site</p></a
-            >
+              <p class="portfolio-text">Web Site</p>
+              </div>
+              </a>
           </li>
         </ul>
       </section>
+      </div>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="link logo"
-        >Web<span class="logo-white">Studio</span></a
-      >
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="footer-content">
+          <a href="./index.html" class="link logo"
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
