--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container flex-header">
         <nav class="nav-menu">
           <a href="./index.html" class="link logo"
@@ -54,153 +54,163 @@
     <main>
       <section class="section portfolio-section">
         <div class="container">
-        <h1 hidden>Portfolio</h1>
-        <ul class="list btn-list">
-          <li class="btn-item"><button type="button" class="btn-filter">All</button></li>
-          <li class="btn-item"><button type="button" class="btn-filter">Web Site</button></li>
-          <li class="btn-item"><button type="button" class="btn-filter">App</button></li>
-          <li class="btn-item"><button type="button" class="btn-filter">Design</button></li>
-          <li class="btn-item"><button type="button" class="btn-filter">Marketing</button></li>
-        </ul>
-        <ul class="list portfolio-list">
-          <li class="portfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/banking-app.jpg"
-                alt="Screens of Banking App"
-                width="360"
-                height="300"
-                class="portgolio-img"
-              />
-              <div class="portgolio-content">
-              <h2 class="portfolio-title">Banking App Interface Concept</h2>
-              <p class="portfolio-text">App</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/cashless.jpg"
-                alt="Payment by card"
-                width="360"
-                height="300"
-                class="portgolio-img"
-              />
-              <div class="portgolio-content">
-              <h2 class="portfolio-title">Cashless Payment</h2>
-              <p class="portfolio-text">Marketing</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/meditation.jpg"
-                alt="App on laptop and on phone"
-                width="360"
-                height="300"
-                class="portgolio-img"
-              />
-              <div class="portgolio-content">
-              <h2 class="portfolio-title">Meditation App</h2>
-              <p class="portfolio-text">App</p>
-              </div>
+          <h1 hidden>Portfolio</h1>
+          <ul class="list btn-list">
+            <li class="btn-item">
+              <button type="button" class="btn-filter">All</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="btn-filter">Web Site</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="btn-filter">App</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="btn-filter">Design</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="btn-filter">Marketing</button>
+            </li>
+          </ul>
+          <ul class="list portfolio-list">
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/banking-app.jpg"
+                  alt="Screens of Banking App"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-content">
+                  <h2 class="portfolio-title">Banking App Interface Concept</h2>
+                  <p class="portfolio-text">App</p>
+                </div>
               </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/taxi.jpg"
-                alt="driver taxi"
-                width="360"
-                height="300"
-                class="portgolio-img"
-              />
-              <div class="portgolio-content">
-              <h2 class="portfolio-title">Taxi Service</h2>
-              <p class="portfolio-text">Marketing</p>
-            </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/screen.jpg"
-                alt="diffrent images on screens"
-                width="360"
-                height="300"
-                class="portgolio-img"
-              />
-              <div class="portgolio-content">
-              <h2 class="portfolio-title">Screen Illustrations</h2>
-              <p class="portfolio-text">Design</p>
-              </div>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/cashless.jpg"
+                  alt="Payment by card"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-content">
+                  <h2 class="portfolio-title">Cashless Payment</h2>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
               </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/online.jpg"
-                alt="Girl smiles"
-                width="360"
-                height="300"
-                class="portgolio-img"
-              />
-              <div class="portgolio-content">
-              <h2 class="portfolio-title">Online Courses</h2>
-              <p class="portfolio-text">Marketing</p>
-              </div>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/meditation.jpg"
+                  alt="App on laptop and on phone"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-content">
+                  <h2 class="portfolio-title">Meditation App</h2>
+                  <p class="portfolio-text">App</p>
+                </div>
               </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/insta.jpg"
-                alt="Diffrent images for Instagram"
-                width="360"
-                height="300"
-                class="portgolio-img"
-              />
-              <div class="portgolio-content">
-              <h2 class="portfolio-title">Instagram Stories Concept</h2>
-              <p class="portfolio-text">Design</p>
-              </div>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/taxi.jpg"
+                  alt="driver taxi"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-content">
+                  <h2 class="portfolio-title">Taxi Service</h2>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
               </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/org-food.jpg"
-                alt="bag with grocery"
-                width="360"
-                height="300"
-                class="portgolio-img"
-              />
-              <div class="portgolio-content">
-              <h2 class="portfolio-title">Organic Food</h2>
-              <p class="portfolio-text">Web Site</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/coffee.jpg"
-                alt="barista poors milk to coffee"
-                width="360"
-                height="300"
-                class="portgolio-img"
-              />
-              <div class="portgolio-content">
-              <h2 class="portfolio-title">Fresh Coffee</h2>
-              <p class="portfolio-text">Web Site</p>
-              </div>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/screen.jpg"
+                  alt="diffrent images on screens"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-content">
+                  <h2 class="portfolio-title">Screen Illustrations</h2>
+                  <p class="portfolio-text">Design</p>
+                </div>
               </a>
-          </li>
-        </ul>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/online.jpg"
+                  alt="Girl smiles"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-content">
+                  <h2 class="portfolio-title">Online Courses</h2>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/insta.jpg"
+                  alt="Diffrent images for Instagram"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-content">
+                  <h2 class="portfolio-title">Instagram Stories Concept</h2>
+                  <p class="portfolio-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/org-food.jpg"
+                  alt="bag with grocery"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-content">
+                  <h2 class="portfolio-title">Organic Food</h2>
+                  <p class="portfolio-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/coffee.jpg"
+                  alt="barista poors milk to coffee"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-content">
+                  <h2 class="portfolio-title">Fresh Coffee</h2>
+                  <p class="portfolio-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
-      </div>
     </main>
     <footer class="footer">
       <div class="container">
