--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container flex-header">
         <nav class="nav-menu">
           <a href="./index.html" class="link logo"
@@ -54,8 +54,10 @@
     <main>
       <!-- Hero section -->
       <section class="section hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <div class="hero-container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button">Order Service</button>
+        </div>
       </section>
 
       <!-- Features section -->
@@ -191,15 +193,13 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-content">
-          <a href="./index.html" class="link logo"
-            >Web<span class="logo-white">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <a href="./index.html" class="link logo"
+          >Web<span class="logo-white">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
