--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main>
       <!-- Hero section -->
       <section class="section hero">
-        <div class="hero-container">
+        <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button">Order Service</button>
         </div>
