corrected background in list (our team), padding in 3 section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </section>
 
       <!-- Works section -->
-      <section class="section">
+      <section class="section work-section">
         <div class="container">
           <h2 class="work-title">What are we doing</h2>
           <ul class="list works-list">
